# genlayer-external-adapter

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.github/workflows/: tests.yml
demo_contract/: weather_insurance.py
relay_service/: __init__.py  generate_keys.py  main.py  providers.py  requirements.txt  schemas.py
sdk/genlayer_external/: __init__.py  core.py  exceptions.py  prices.py  social.py  verifier.py  weather.py
sdk/genlayer_external_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_providers.py  test_relay_and_sdk.py
